--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "@aws-sdk/client-textract": "^3.955.0",
     "@aws-sdk/s3-request-presigner": "^3.955.0",
     "@elysiajs/cors": "^1.4.1",
-    "@elysiajs/openapi": "^1.4.13",
+    "@elysiajs/openapi": "latest",
     "@grotto/logysia": "^0.1.6",
     "@mastra/core": "latest",
     "@mastra/mcp": "latest",
@@ -28,7 +28,7 @@
     "@types/papaparse": "^5.5.2",
     "ai": "^6.0.42",
     "amazon-textract-response-parser": "^0.4.3",
-    "elysia": "^1.4.21",
+    "elysia": "latest",
     "papaparse": "^5.5.3",
     "sharp": "^0.34.5",
     "zod": "^4"
